@@ -1,7 +1,8 @@
+MANIFEST
 Build.PL
-MANIFEST			This list of files
-README
 Changes
+README.md
+lib/App/PerlCalc.pm
 pc
 t/basic.t
 t/output.t
