@@ -1,19 +1,25 @@
 ---
-name: App-PerlCalc
-version: 1.1.1
+abstract: 'A simple but feature filled command line Perl calculator'
 author:
   - 'David Caldwell <david@porkrind.org>'
-abstract: A simple but feature filled command line Perl calculator
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  perl: 5.8.0
 build_requires:
   Test::Script::Run: 0
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: App-PerlCalc
+provides:
+  App::PerlCalc:
+    file: lib/App/PerlCalc.pm
+    version: v1.2.0
 recommends:
   Term::ReadLine: 0
-generated_by: Module::Build version 0.280801
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+requires:
+  perl: v5.8.0
+resources:
+  license: http://dev.perl.org/licenses/
+version: v1.2.0
