@@ -3,7 +3,6 @@
 
 use strict;
 use warnings;
-our $VERSION = '1.1.1';
 
 sub revstr($) { join "", reverse split //, $_[0] } # Reverse the characters in a string.
 sub comma($$) { revstr join(",", unpack("(A$_[1])*", revstr($_[0]))) }
@@ -29,7 +28,7 @@ sub compute ($) {
         use POSIX;
         use List::Util 'min';
         my @pow2 = qw(B KB MB GB TB PB EB ZB YB);
-        # This is weird beause we can't use a bigint directly since log(bigint(1<<400))
+        # This is weird because we can't use a bigint directly since log(bigint(1<<400))
         # takes hours (literally). So we convert into a perl scalar so we can use fast
         # floating point log() (the precision we lose going to a scalar doesn't matter
         # in the context of log()) and then convert back to a bigint for the pow().
@@ -46,6 +45,7 @@ sub compute ($) {
     printf " %.15s",$n if $is ne $n."";
     print  " $r"       if $is ne $r."" && $n."" ne $r."";
     printf " '%c'",$a  if $a >= ord ' ' && $a <= ord '~';
+    printf " %b", $i   if $i < 0x10000;
     print  "\n";
 }
 
@@ -126,7 +126,7 @@ We also get Perl (and C) style bitwise operators:
   $ pc '1+3*20<<2 & 0xff'
   244 0xf4 0364
 
-Also notice that we had to quote it since (a) I put a space in the
+Also notice that I had to quote it since (a) I put a space in the
 expression and (b) I used the '<' and '&' characters which mean something to
 the shell.
 
@@ -184,6 +184,13 @@ C<pc> uses Perl's bigint so that it can handle numbers bigger than 32 bits:
 
   $ pc '1<<40'
   1,099,511,627,776 1099511627776 0x100,0000,0000 0x10000000000 020000000000000 1TB
+
+=head2 Trancendental and trignomentric functions
+
+C<pc> gives you access to all the Perl math functions:
+
+  $ pc 'sin(3.141592) ** .5'
+  1 0x1 0 0.0008084490047 1.772453666531229808666207156690905830337 1
 
 =head2 Random Perl code
 
